main intro and sun intro in index page ready

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <!-- <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a> -->
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
@@ -93,8 +93,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2>I'm <span>Jenny Wilson</span> a Professional Photographer from New York City</h2>
-          <p>Blanditiis praesentium aliquam illum tempore incidunt debitis dolorem magni est deserunt sed qui libero. Qui voluptas amet.</p>
+          <h2><span>Divan's Photography</span>: Capturing Moments, Crafting Memories with Precision</h2>
+          <p>Explore the artistry of Divan's Photography, where every click narrates a unique story. Based in Halifax, I specialize in turning moments into timeless memories with precision. Dive into my portfolio, and let's create lasting impressions together.</p>
           <a href="contact.html" class="btn-get-started">Available for hire</a>
         </div>
       </div>
