about color text

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a> -->
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
-      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x" style="color: rgb(0, 0, 0);"></i>
 
     </div>
   </header><!-- End Header -->
