--- a/contact.html
+++ b/contact.html
@@ -150,8 +150,11 @@
                   <input type="text" name="NAME" class="form-control" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="EMAIL" id="email" placeholder="Your Email" required>
+                  <input type="text" class="form-control" name="PHONE" id="phone" placeholder="Your Phone" required>
                 </div>
+              </div>
+              <div class="form-group mt-3 mt-md-0">
+                <input type="emial" class="form-control" name="EMAIL" id="email" placeholder="Your Email" required>
               </div>
               <div class="form-group mt-3">
                 <input type="text" class="form-control" name="SUBJECT" id="subject" placeholder="Subject" required>
@@ -203,7 +206,7 @@
   <script>
     const form = document.querySelector("#form")
     const submitButton = document.querySelector("#submit")
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbzyORM-2WxqkmyH88XSNkVNSLz5LUMGAPUnWPZ8LOj57mTHvCXljrdV9JhVHOtatQCfIg/exec'
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbygLCn9eHAibmFKOrA3rMk1Mhy_tvqn70R12_FON9_6u9TPNDR_934OW8uGZ79VQl1UVA/exec'
  
     form.addEventListener('submit', e => {
       submitButton.disabled = true
