--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
       <div class="header-social-links">
         <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://instagram.com/arungovildivan?igshid=NzZlODBkYWE4Ng==" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://m.facebook.com/divansphotography/" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://instagram.com/arungovildivan/" class="instagram"><i class="bi bi-instagram"></i></a>
         <!-- <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a> -->
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
